# vtk-isovolume-evaluation

./: README.md
par/: CMakeLists.txt  main.cxx
seq/: CMakeLists.txt  main.cxx
